modify etcd, flannel

--- a/roles/flannel/templates/flanneld-cfg.json.j2
+++ b/roles/flannel/templates/flanneld-cfg.json.j2
@@ -1,1 +1,1 @@
-{"Network":"'{{CLUSTER_CIDR}}'", "SubnetLen": 24, "Backend": {"Type": "vxlan"}}
+{"Network":"{{CLUSTER_CIDR}}", "SubnetLen": 24, "Backend": {"Type": "vxlan"}}
