--- a/roles/master/templates/kube-controller-manager.service.j2
+++ b/roles/master/templates/kube-controller-manager.service.j2
@@ -15,6 +15,7 @@ ExecStart=/root/local/bin/kube-controller-manager \
   --service-account-private-key-file=/etc/kubernetes/ssl/ca-key.pem \
   --root-ca-file=/etc/kubernetes/ssl/ca.pem \
   --leader-elect=true \
+  --insecure-experimental-approve-all-kubelet-csrs-for-group=system:bootstrappers \
   --v=2
 Restart=on-failure
 RestartSec=5
