添加服务自动启动

--- a/roles/node/templates/kubelet.service.j2
+++ b/roles/node/templates/kubelet.service.j2
@@ -20,6 +20,7 @@ ExecStart=/root/local/bin/kubelet \
   --allow-privileged=true \
   --serialize-image-pulls=false \
   --logtostderr=true \
+  --register-node=true \
   --v=2
 ExecStartPost=/sbin/iptables -A INPUT -s 10.0.0.0/8 -p tcp --dport 4194 -j ACCEPT
 ExecStartPost=/sbin/iptables -A INPUT -s 172.16.0.0/12 -p tcp --dport 4194 -j ACCEPT
